--- a/Client-Service/build.gradle
+++ b/Client-Service/build.gradle
@@ -11,7 +11,6 @@ buildscript {
 }
 
 apply plugin: 'java'
-apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 
 version = '0.0.1-SNAPSHOT'
@@ -27,7 +26,17 @@ ext {
 }
 
 dependencies {
-	compile('org.springframework.cloud:spring-cloud-starter-eureka-server')
+	compile('org.springframework.cloud:spring-cloud-starter-config')
+	compile('org.springframework.cloud:spring-cloud-starter-eureka')
+	compile('org.springframework.cloud:spring-cloud-starter-hystrix')
+	compile('org.springframework.cloud:spring-cloud-starter-zuul')
+	compile('org.springframework.cloud:spring-cloud-starter-stream-rabbit')
+
+	compile ('org.springframework.boot:spring-boot-starter-hateoas')
+	compile ('org.springframework:spring-messaging')
+
+
+
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
