--- a/Service/src/main/resources/bootstrap.properties
+++ b/Service/src/main/resources/bootstrap.properties
@@ -1,3 +1,3 @@
-spring.application.name=eureka-service
+spring.application.name=service
 spring.cloud.config.uri=http://localhost:8888
 management.security.enabled=false
